# First_Reference

./: .dockerignore  Dockerfile  README.md  auth.js  cancellation-policy.html  cart.html  checkout.html  docker-compose.yml  index.html  index.html.bak  llms.txt  login.html  nginx.conf  privacy-policy.html  profile.html  register.html  script.js  sitemap.xml  styles.css  terms-conditions.html  thank-you.html
api/: .env  README.md  app.py  pyproject.toml  requirements.txt
api/instance/: first_reference.db
blog/: ai-blockchain-bgv.html  background-verification-guide.html  candidate-verification-gig-economy.html  hire-smarter-with-first-reference.html  index.html  the-problem-first-reference-is-solving.html
blog/ai-blockchain-bgv/: index.html
blog/background-verification-guide/: index.html
blog/candidate-verification-gig-economy/: index.html
blog/hire-smarter-with-first-reference/: index.html
blog/the-problem-first-reference-is-solving/: index.html
cancellation-policy/: index.html
privacy-policy/: index.html
terms-conditions/: index.html
test/: Screenshot-2025-10-10-at-23-00-01--1000w.avif  Screenshot-2025-10-10-at-23-00-01--1200w.avif  Screenshot-2025-10-10-at-23-00-01--1600w.avif  Screenshot-2025-10-10-at-23-00-01--400w.avif  Screenshot-2025-10-10-at-23-00-01--600w.avif  Screenshot-2025-10-10-at-23-00-01--800w.avif  index.html
